# scatsutilities

./: CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.md  index.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  scats-utils.rst  scats_utils.rst  scatsutilities.rst  scatsutils.rst
qgis_styles/: LP_data.qml  PP_data.qml  SL_data.qml
scats_utils/: scats_utils.py
scatsutilities/: scatsutilities.py
tests/: test_import.ipynb  test_scats_utils.py  test_scatsutilities.py
