[tool.poetry]
name = "scats_utils"
version = "0.1.0"
description = "Python package providing utilities to process SCATS traffic system data"
authors = ["John Trieu"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
